<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TurtleDiary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="petName">寵物名稱</string>
    <string name="pleaseInputPetName">請輸入寵物名稱</string>
    <string name="previous">上一步</string>
    <string name="next">下一步</string>
    <string name="dynamicGenerate">程式碼產生</string>
    <string name="edit">修改</string>
    <string name="petType">寵物品種</string>
    <string name="nutrition">營養</string>
    <string name="recommendFood">食材喜好排行</string>
    <string name="weight">體重</string>
    <string name="shellLength">甲長</string>
    <string name="shellLengthAndWeight">甲長&amp;體重</string>
    <string name="title_activity_option">Option</string>
    <string name="healthyLog">健康紀錄</string>
    <string name="petInformation">寵物資訊</string>
    <string name="environmentName">環境名稱</string>
    <string name="length">長</string>
    <string name="width">寬</string>
    <string name="height">高</string>
    <string name="environmentHotPoint">環境熱點</string>
    <string name="environmentLowPoint">環境低點</string>
    <string name="maxHumidity">最高濕度</string>
    <string name="minHumidity">最低濕度</string>
    <string name="cm">公分</string>
    <string name="temperature">(℃)</string>
    <string name="percent">(%)</string>
    <string name="complete">完成</string>
    <string name="add">新增</string>
    <string name="restore">還原</string>
    <string name="title_activity_environment">TurtleDiary</string>
    <string name="activity_pet">ActivityPet</string>
    <string name="gender">性別</string>
    <string name="petEnvironment">寵物環境</string>
    <string name="petBirthday">寵物生日</string>
    <string name="genderMale">公</string>
    <string name="genderFemale">母</string>
    <string name="genderUnknown">未知</string>
    <string name="pleaseInputPetBirthday">請輸入寵物生日</string>
    <string name="FeedLog">餵食記錄</string>
    <string name="report">報表</string>
    <string name="environmentSetting">環境設定</string>
    <string name="gram">克</string>
    <string name="food">食物</string>
    <string name="pleaseInputFoodName">請輸入食物名稱</string>
    <string name="pleaseInputWeight">請輸入重量</string>
    <string name="selectFood">選擇食物</string>
    <string name="kcal">熱量</string>
    <string name="foodDescription">食物詳細資訊(100克)</string>
    <string name="water">水分</string>
    <string name="crudeFat">粗脂肪</string>
    <string name="calcium">鈣</string>
    <string name="phosphorus">磷</string>
    <string name="feed">餵食</string>
    <string name="title_activity_measure">MeasureActivity</string>
    <string name="measure">測量</string>
    <string name="jacksonRatio">傑克森量表</string>
    <string name="pleaseInputEnvironmentName">請輸入環境名稱</string>
    <string name="defaultLength">60</string>
    <string name="defaultWidth">45</string>
    <string name="defaultHeight">45</string>
    <string name="defaultHotPoint">32</string>
    <string name="defaultLowPoint">28</string>
    <string name="defaultMaxHumidity">80</string>
    <string name="defaultMinHumidity">60</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logHealthy">健康記錄</string>
    <string name="picture">照片</string>
    <string name="getPicture">取得照片</string>
    <string name="foodWeight">重量</string>
    <string name="selectedFoods">已選擇的食物</string>
    <string name="nextFood">下一個食物</string>
    <string name="addToFoodList">加入食物清單</string>
    <string name="dryWeight">乾重</string>
    <string name="protein">粗蛋白</string>
    <string name="fabric">粗纖維</string>
    <string name="caPRatio">鈣磷比</string>

</resources>
