<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.td.turtlediary.AddPetActivity" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petName"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/petActivityPetNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/petType"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/petActivityPetTypeSpinner"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="30dip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picture"
                android:textSize="20sp" />

            <Button
                android:id="@+id/petActivitySelectPictureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getPicture"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/petActivityGenderRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/petActivityMaleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/genderMale"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/petActivityFemaleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genderFemale"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/petActivityUnknownRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genderUnknown"
                    android:textSize="20sp" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petEnvironment"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/petActivityEnvironmentSpinner"
                android:layout_width="wrap_content"
                android:layout_height="30dip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petBirthday"
                android:textSize="20sp" />

            <Button
                android:id="@+id/petActivityBirthdayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </TableRow>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/petActivityNextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/next"
                android:textSize="20sp" />

            <Button
                android:id="@+id/petActivityAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/add"
                android:textSize="20sp" />

            <Button
                android:id="@+id/petActivityEditButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/edit"
                android:textSize="20sp" />

            <Button
                android:id="@+id/petActivityRestoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/petActivityEditButton"
                android:text="@string/restore"
                android:textSize="20sp" />
        </RelativeLayout>
    </TableLayout>

</ScrollView>