<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.td.turtlediary.AddPetActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/petActivityPetNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewName"
        android:layout_alignBottom="@+id/textViewName"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:layout_toRightOf="@+id/textViewName"
        android:ems="10"
        android:hint="@string/pleaseInputPetName" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/petName" />

    <Button
        android:id="@+id/petActivityNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/firstAddPetPreviousButton"
        android:layout_alignBottom="@+id/firstAddPetPreviousButton"
        android:layout_alignRight="@+id/petActivityPetNameEditText"
        android:text="@string/next" />

    <Button
        android:id="@+id/firstAddPetPreviousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewName"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:text="@string/previous" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/petActivityPetNameEditText"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/petActivityPetNameEditText"
        android:text="@string/petType" />

    <EditText
        android:id="@+id/petActivityBirthdayEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/petActivityPetNameEditText"
        android:layout_alignRight="@+id/petActivityPetNameEditText"
        android:layout_alignTop="@+id/textView1"
        android:ems="10"
        android:hint="@string/dynamicGenerate" />

</RelativeLayout>