<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.td.turtlediary.ModifyPetActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/petName" />

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewName"
        android:layout_alignTop="@+id/editTextType"
        android:text="@string/petType" />

    <EditText
        android:id="@+id/petActivityPetNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textViewName"
        android:layout_marginRight="50dp"
        android:layout_toRightOf="@+id/textViewName"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/dynamicGenerate"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/petActivityPetNameEditText"
        android:layout_alignRight="@+id/petActivityPetNameEditText"
        android:layout_below="@+id/petActivityPetNameEditText"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/dynamicGenerate"
        android:inputType="text" />

    <Button
        android:id="@+id/petActivityNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/edit" />

</RelativeLayout>